# sx9

./: .codespellrc  .cursorrules  .gitignore  .lightningignore  CLAUDE.md  Cargo.toml  ENGINEERING_STANDARDS.md  README.md  TECH_DEBT_CHICKEN_SALAD_PLAN.md  containers.txt  lightning-qa-full-output.txt  manual_findings.json  package.json  pnpm-lock.yaml  qa_comparison_report.md  qa_report.md  qa_report.toml  qodo_results.json  setup_antigravity.sh  sonar_normalized.json  sx9-registry.toml  sx9.code-workspace  sx9.promp-forge-workspace.code-workspace  sx9_qodo_results.json  sx9_security_report.sarif
04-sx9-converge/converge-selection/: Cargo.toml
04-sx9-converge/sx9-converge/: Cargo.toml
04-sx9-converge/sx9-converge/src/: tov.rs
crates/sx9-ann-engine/: Cargo.toml
crates/sx9-ann-engine/src/: lib.rs
crates/sx9-atlas-bus/: Cargo.toml
crates/sx9-atlas-bus/benches/: throughput.rs
crates/sx9-atlas-bus/src/: bridge.rs  bus.rs  command.rs  crystal.rs  lib.rs  plasma.rs  result.rs  ring.rs
crates/sx9-atlas-daemon/: Cargo.toml  smart-crate.toml
crates/sx9-atlas-daemon/src/: convergence.rs  hd4_phases.rs  lib.rs  main.rs  ooda_loop.rs
crates/sx9-cdn-data-fabric/: Cargo.toml  Dockerfile
crates/sx9-cdn-data-fabric/src/: ground_stations.rs  main.rs  registry.rs  router.rs  transform.rs
crates/sx9-cdn-geospatial/: Cargo.toml
crates/sx9-cdn-geospatial/src/: lib.rs
crates/sx9-cdn-isolated-monitoring/: Cargo.toml  Dockerfile  Dockerfile.gold-disk  smart-crate.toml
crates/sx9-cdn-isolated-monitoring/monitoring-demo-results-20250912_080044/: performance_measurements.csv  statistical_data.json
crates/sx9-cdn-isolated-monitoring/src/: bloat_monitor.rs  cdn.rs  cdn_bridge.rs  component_cdn.rs  component_overlap.rs  components.rs  core.rs  ecs_tool_components.rs  foundation_integration.rs  gateway-cdn.rs  gateway_cdn.rs  gateway_cdn_refactored.rs  gateway_handlers.rs  lib.rs  monitoring_dashboard.rs  network_monitor.rs  performance_monitor.rs  protocol_gateway.rs  resource_monitor.rs  rust_independent_monitor.rs  shipyard-cdn-edge.rs  shipyard-cdn-origin.rs
crates/sx9-cdn-monitoring/: Cargo.toml  Dockerfile
crates/sx9-cdn-monitoring/src/: analysis_engine.rs  analytics.rs  cache.rs  cdn.rs  component_cdn.rs  cyber_operations.rs  edge.rs  gateway_cdn.rs  gateway_cdn_refactored.rs  gateway_handlers.rs  intelligence_handlers.rs  intelligence_reports.rs  lib.rs  nginx_manager.rs  origin.rs  routing.rs  service_registry.rs  traffic_analysis.rs  traffic_analysis_core.rs  traffic_intelligence.rs  traffic_intelligence_refactored.rs  traffic_types.rs  types.rs
crates/sx9-cdn-statistical/: Cargo.toml  Dockerfile
crates/sx9-cdn-statistical/src/: main.rs
crates/sx9-cdn-threat-intel/: Cargo.toml  ctas-7-shipyard-staging.code-workspace
crates/sx9-cdn-threat-intel/src/: lib.rs
crates/sx9-cdn-threat-reaction/: Cargo.toml
crates/sx9-cdn-threat-reaction/src/: lib.rs  main.rs  reaction_cache.rs  simulation_engine.rs
crates/sx9-claude-sdk/: Cargo.toml
crates/sx9-claude-sdk/src/: client.rs  error.rs  lib.rs  messages.rs  streaming.rs  tools.rs
crates/sx9-dsl-engine/: Cargo.toml
crates/sx9-dsl-engine/src/: dsl.rs  executor.rs  file_watcher.rs  lib.rs  wasm_runtime.rs
crates/sx9-forge/: Cargo.toml  README.md  smart-crate.toml
crates/sx9-forge/src/: graph.rs  lib.rs  mission_load.rs  nonagon.rs  ossec_loader.rs  tool_gen.rs
crates/sx9-foundation-core/: Cargo.toml  Dockerfile  build.rs  ctas7-status-template.toml  docker-stack.yml  gold-disk-retrofit.sh  qa-test.Dockerfile  smart-crate.toml  swarm-qa.sh
crates/sx9-foundation-core/examples/: ctas7_v72_demo.rs  phi4_sled_storage_example.rs  simple_buttonology_dev_tool.rs.bak  zero_deps_neural_mux.rs
crates/sx9-foundation-core/schemas/: ctas7-orchestration.xsd
crates/sx9-foundation-core/src/: abilities.rs  agent_mux.rs  ai_engine.rs  ai_handlers.rs  ai_tool.rs  analysis_engine.rs  analysis_models.rs  analytics.rs  atomic_properties.rs  auto_discovery.rs  autonomous.rs  behavior_bio.rs  biometric_fingerprint_analysis.rs  build.rs  c2_simulation.rs  cache_manager.rs  cannon_plug.rs  cannon_plug_connector.rs  capabilities.rs  census.rs  certified_crate_system.rs.bak  cli.rs  cli_manifest.rs  client.rs  code_watchdog.rs  cognitive.rs  cognitive_atoms.rs  cognivault_storage.rs  conference_engine.rs  config.rs  context.rs  core.rs  crate_leaderboard.rs  crawler.rs  cross_location.rs  crs_document_analysis.rs  crypto.rs  crypto_tracker.rs  ctas-analysis-watcher.rs  ctas7-beacon-analysis-environment.rs  (+217 more)
crates/sx9-foundation-core/static/: dashboard.html
crates/sx9-foundation-core/tests/: sdio_integration_tests.rs  sdio_integration_tests.rs.bak
crates/sx9-foundation-daemon/: Cargo.toml  DSL_ARCHITECTURE_FRAMEWORK.md  Dockerfile.foundation-daemon  GROUND_TRUTH_SESSION_20241120.md  README.md  SYSTEM_ARCHITECTURE_DIAGRAMS.md  UPDATED_SYSTEM_ARCHITECTURE_WITH_GLAF.md  docker-compose.minimal.yml  docker-compose.orbstack-complete.yml  smart-crate.toml
crates/sx9-foundation-daemon/src/: foundation_integration.rs  lib.rs  (+1 more)
crates/sx9-foundation-data/: .clippy.toml  Cargo.toml  Dockerfile  rustfmt.toml  smart-crate.toml
crates/sx9-foundation-interface/: .clippy.toml  Cargo.toml  Dockerfile  Dockerfile.gold-disk  rustfmt.toml  smart-crate.toml  smart-crate.toml.bak
crates/sx9-foundation-manifold/: Cargo.toml  Cargo.toml.bak3  smart-crate.toml
crates/sx9-foundation-math/: Cargo.toml  SUBAGENT_MATH_BRIEF_UPDATED.md  smart-crate.toml
crates/sx9-foundation-tactical/: Cargo.toml  Dockerfile.gold-disk  smart-crate.toml
crates/sx9-foundation-voice/: Cargo.toml  smart-crate.toml
crates/sx9-gateway-primary/: Cargo.toml  smart-crate.toml
crates/sx9-glaf-core/: Cargo.toml  README.md
crates/sx9-harness/: Cargo.toml  perf-budgets.example.json
crates/sx9-hashing-engine/: Cargo.toml  Dockerfile  README.md  USIM_EXAMPLES.md  smart-crate.toml
ctas7-foundation-core/: Cargo.toml
ctas7-foundation-core/src/: lib.rs
sx9-linear-agent/: Cargo.toml  README.md
sx9-linear-agent/config/: linear.toml
sx9-linear-agent/src/: main.rs
(+2662 files in other folders)
