[package]
name = "sx9-converge"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "CONVERGE distributed action-set convergence sensor (RFC-93XX family)"

[features]
default = ["hot-path"]
hot-path = []
sim = []

[dependencies]
# Foundation crate - brings in all core deps via re-exports
sx9-foundation-core = { path = "../../crates/sx9-foundation-core" }

# Serde needed directly for derive macros (re-exports don't work for proc-macros)
serde.workspace = true

# ECS and parallelism (not in foundation-core)
crossbeam = "0.8"
legion = "0.4"           # Hot path (H2 operational)
apecs = "0.8"            # Async path (H1 semantic, deterministic arbiter)

[package.metadata.smart_crate]
class = "analytic.sensor.convergence"
deterministic = true
storage = "none"
rfc = ["9101", "9021", "9304", "93X1", "93X2", "93X3", "93X4"]
