[package]
name = "sx9-atlas-bus"
version = "0.1.0"
edition = "2021"
description = "Zero-allocation ring buffer for ATLAS daemon IPC"
license = "MIT OR Apache-2.0"

[features]
default = []
std = []
nats = ["dep:async-nats", "dep:tokio", "dep:serde", "dep:serde_json", "dep:uuid", "dep:anyhow", "dep:tracing"]
wasm = []

[dependencies]
# Optional: NATS bridge
async-nats = { version = "0.35", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }
anyhow = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "throughput"
harness = false

