[package]
name = "sx9-atlas-daemon"
version.workspace = true
edition.workspace = true
description = "SX9 ATLAS Daemon - Cognitive Engine with OODA Loop integrated with sx9-atlas-bus"
license.workspace = true

[[bin]]
name = "sx9-atlas-daemon"
path = "src/main.rs"

# Smart Crate System metadata
[package.metadata.ctas7]
crate_type = "daemon"
mission = "CognitiveOrchestration"
security_level = "High"
orchestrator_compatible = true
cannibalization_protected = true
xsd_symbols = ["\\u{E500}"]
assembly_language_version = "7.3.1"
neural_mux_priority = "critical"
port_range_start = 18106
port_range_end = 18109

[package.metadata.smart_crate]
template_version = "7.3.1"
orchestrator_version = "7.3.1"
autonomous_deployment = true
threat_hunting_enabled = true
neural_mux_integration = true
unicode_compression_enabled = true
trivariate_hash_support = true
emoji_status_enabled = true
database_connection_pool = true
xsd_orchestrator_type = "daemon"
assembly_language_linkup = true

[dependencies]
# SX9 ecosystem
sx9-atlas-bus = { path = "../sx9-atlas-bus", features = ["std", "nats"] }

# Foundation crates - use foundation-core for all common dependencies
sx9-foundation-core = { path = "../sx9-foundation-core" }

# Direct dependencies needed for derive macros
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

# Note: Use sx9-foundation-core re-exports where possible:
# - sx9_foundation_core::async_runtime::tokio (for tokio types)
# - sx9_foundation_core::diagnostics::anyhow (for Result types)
# - sx9_foundation_core::diagnostics::tracing (for tracing macros)

# External dependencies needed for main binary
clap = { version = "4.4", features = ["derive"] }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
