[package]
name = "sx9-cdn-threat-intel"
version = "7.3.1"
edition = "2021"
authors = ["CTAS-7 Engineering Team"]
description = "CTAS-7 Threat Intelligence CDN - Edge distribution for DSL playbooks, MITRE mappings, Wazuh rules, and threat signatures"
license = "MIT"
keywords = ["ctas", "cdn", "threat-intel", "wazuh", "mitre", "dsl"]
categories = ["web-programming", "network-programming", "security"]

[[bin]]
name = "ctas7-cdn-threat-intel"
path = "src/bin/threat_intel_server.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.37", features = ["full", "rt-multi-thread"] }
futures = { version = "0.3", features = ["std"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP server
axum = { version = "0.7", features = ["ws", "multipart", "json"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# UUID and time
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Caching and storage
sled = "0.34"
dashmap = "5.5"

# Hashing for content addressing
sha2 = "0.10"
hex = "0.4"

# Compression for efficient transfer
flate2 = "1.0"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for upstream sync
reqwest = { version = "0.12", features = ["json", "gzip"] }

# NATS messaging backbone
async-nats = "0.33"

# CTAS Foundation (optional)
ctas7-foundation-daemon = { package = "sx9-foundation-daemon", path = "../sx9-foundation-daemon", optional = true }
ctas7-foundation-core = { package = "sx9-foundation-core", path = "../sx9-foundation-core", optional = true }

[features]
default = []
foundation = ["ctas7-foundation-daemon", "ctas7-foundation-core"]
wazuh-integration = []
plasma-integration = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[package.metadata.ctas]
smart_crate = true
foundation_version = "7.3.1"
auto_deploy = true
container_runtime = "orbstack"
port = 18110
health_check = "/health"
requires_port_manager = true
bernoulli_zone = "analytical"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = true

[lints]
workspace = true
