[package]
name = "sx9-cdn-threat-reaction"
version = "7.3.1"
edition = "2021"
authors = ["CTAS-7 Engineering Team"]
description = "CTAS-7 Threat Reaction & Simulation CDN - Threat response routing, caching, and simulation"
license = "MIT"
keywords = ["ctas", "cdn", "threat", "reaction", "simulation"]
categories = ["web-programming", "network-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread"] }
futures = { version = "0.3", features = ["std"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP server
axum = { version = "0.7", features = ["ws", "multipart", "json"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }

# UUID and time
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Caching
sled = "0.34"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# CTAS dependencies
ctas7-foundation-daemon = { package = "sx9-foundation-daemon", path = "../sx9-foundation-daemon" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"








[features]
default = ["smart-crate"]
smart-crate = []

[package.metadata.ctas]
smart_crate = true
foundation_version = "7.3.1"
auto_deploy = true
container_runtime = "orbstack"
port = 18112
health_check = "/health"
requires_port_manager = true
bernoulli_zone = "tactical"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = true

[lints]
workspace = true
