[package]
name = "sx9-forge"
version.workspace = true
edition.workspace = true
description = "SX9 Forge - Dynamic tool generation with GLAF graph, Nonagon workflow, and Mission Load Sets"
license.workspace = true

[features]
default = ["full"]
full = ["graph", "mission-load", "tool-gen", "ringbus", "nonagon"]
graph = []
mission-load = []
tool-gen = []
ringbus = []
nonagon = []

[dependencies]
# Foundation crates
sx9-foundation-core = { path = "../sx9-foundation-core" }
sx9-glaf-core = { path = "../sx9-glaf-core" }
sx9-atlas-bus = { path = "../sx9-atlas-bus", features = ["std"] }

# Graph storage (Neo4j-like embedded)
sled = "0.34"
petgraph = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP server (for Forge API)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Hashing
blake3 = "1.5"

[[bin]]
name = "sx9-forge"
path = "src/bin/forge_server.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
